--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,16 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+  
+  download:
+    needs: build
+    runs-on: ubuntu-latest
+   
+    steps:
+    - name: Download code
+      uses: actions/download-artifact@v2
+      with:
+        name: hello-artifact
+        path: hello.txt
+   - name: Display content
+     run:  cat ./artifacts/hello.txt
