--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -28,6 +28,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: hello-artifact
-        path: hello.txt
-   - name: Display content
-     run:  cat ./artifacts/hello.txt
+        path: ./artifacts
+    
+    - name: Display content
+      run:  cat ./artifacts/hello.txt
